--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,7 +43,8 @@ jobs:
           uses: docker/build-push-action@v2 
           with:
             push: true
-            tags: api_yamdb/marinachernykh/api_yamdb_web:latest
+            file: api_yamdb/Dockerfile
+            tags: marinachernykh/api_yamdb_web:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
