--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir /app/api_yamdb
 COPY api_yamdb/requirements.txt /app/api_yamdb
 RUN pip3 install -r /app/api_yamdb/requirements.txt --no-cache-dir
 COPY . /app
-CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0.0.0.0:8000" ]
+CMD ["gunicorn", "api_yamdb.api_yamdb.wsgi:application", "--bind", "0.0.0.0:8000" ]
